add oeminfo module for handling oeminfo

--- a/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-prod.yml
+++ b/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 ---
 server:
-  port: 10060
+  port: 10160
   contextPath: /
 logging:
   level:
@@ -82,3 +82,10 @@ api-asset-alloction-url: http://localhost:10020
 
 # 每日收益计算 多线程
 daily-finance-calculate-thread: 8
+
+#oeminfo
+oem_info:
+  oem_id: 1
+    oem_name: 贝贝鱼
+  oem_id: 2
+    oem_name: 百合
