--- a/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-dev.yml
+++ b/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-dev.yml
@@ -1,7 +1,6 @@
 ---
 server:
-  port: 10060
-  contextPath: /
+  port: 10160
 logging:
   level:
     org.hibernate.SQL: info
@@ -44,10 +43,7 @@ spring:
     password: redis123
     timeout: 0
     pool:
-      max-active: 8
-      max-wait: -1
-      max-idle: 8
-      min-idle: 0
+
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.10:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
@@ -68,21 +64,7 @@ datasource:
       dialect: org.hibernate.dialect.MySQLDialect
 
 grpc:
-  userinfo:
-    host: localhost
-    port: 10061
-  data-manager-rpc:
-    host: localhost
-    port: 10031
-  finance-trade-order-rpc:
-    host: localhost
-    port: 10101
-  finance-trade-pay-rpc:
-    host: localhost
-    port: 10111
-  datacollection-server-rpc:
-    host: localhost
-    port: 10091
+  port: 10161
 
 
 aaas-api-finance-url: http://localhost:10120
@@ -91,3 +73,10 @@ api-asset-alloction-url: http://localhost:10020
 
 # 每日收益计算 多线程
 daily-finance-calculate-thread: 8
+
+#oeminfo
+oem_info:
+  oem_id: 1
+    oem_name: 贝贝鱼
+  oem_id: 2
+    oem_name: 百合
