update for add oeminfo and add index on trdlog

--- a/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-dev.yml
+++ b/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-dev.yml
@@ -76,7 +76,11 @@ daily-finance-calculate-thread: 8
 
 #oeminfo
 oem_info:
-  oem_id: 1
-    oem_name: 贝贝鱼
-  oem_id: 2
-    oem_name: 百合
+   - oem_id: 1
+     oem_name: 贝贝鱼
+     bank_phone: xxxxxxxx
+     prod_name: 贝贝鱼智投
+   - oem_id: 2
+     oem_name: 百合
+     bank_phone: 400-88-96799
+     prod_name: 百合智投
