--- a/aaas-api-user-info/src/main/resources/application-it.yml
+++ b/aaas-api-user-info/src/main/resources/application-it.yml
@@ -25,19 +25,26 @@ spring:
         acknowledge-mode: auto
     username: ssf
     password: shellshellfish
-    host: 192.168.1.22
+    host: 192.168.1.249
     port: 5672
     virtual-host: aaas
-    topicQueuePayName: com.ssf.topic.queue.pay
-    topicQueueOrderName: com.ssf.topic.queue.order
-    topicExchangeName: com.ssf.topic.exchange
+    topicQueuePayName: com-ssf-topic-queue-pay
+    topicQueueOrderName: com-ssf-topic-queue-order
+    topicQueueUserinfoName: com-ssf-topic-queue-userinfo
+    topicExchangeName: com-ssf-topic-exchange
     topicPay: shellshellfish.pay
     topicOrder: shellshellfish.order
     topicUserinfo: shellshellfish.userinfo
+    topicDailyCalculateAsset: com-ssf-topic-calculate-asset
   redis:
     host: 192.168.1.10
     port: 6379
     password: redis123
+    pool:
+      max-active: 8
+      max-wait: -1
+      max-idle: 8
+      min-idle: 0
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.249:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
