--- a/aaas-api-asset-allocation/src/main/resources/application-k8s.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-k8s.yml
@@ -13,6 +13,27 @@ spring:
     jpa:
       hibernate:
         ddl-auto: update
+
+
+datasource:
+  sampleapp:
+    url: jdbc:mysql://external-mysql-service:3306/choice?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+    username: ssf08
+    password: 1rIQ9wi!@g3P$Qh*
+    driverClassName: com.mysql.jdbc.Driver
+    defaultSchema: ssf08
+    maxPoolSize: 20
+    hibernate:
+      connection:
+        useUnicode: true
+        characterEncoding: UTF-8
+      jdbc:
+        batch_size: 50
+      hbm2ddl.method: update
+      show_sql: true
+      format_sql: true
+      dialect: org.hibernate.dialect.MySQLDialect
+
 grpc:
 #  host: localhost
   port: 10021
