--- a/aaas-api-asset-allocation/pom.xml
+++ b/aaas-api-asset-allocation/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.shellshellfish</groupId>
@@ -24,9 +24,6 @@
         <slf4j.version>1.7.13</slf4j.version>
         <logback.version>1.1.3</logback.version>
     </properties>
-
-
-
 
 
     <dependencies>
@@ -184,6 +181,11 @@
             <artifactId>json-schema-validator</artifactId>
             <version>3.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-core</artifactId>
+            <version>1.9.0</version>
+        </dependency>
 
     </dependencies>
 
@@ -209,12 +211,6 @@
             </extension>
         </extensions>
         <plugins>
-            <!--<plugin>-->
-            <!--<artifactId>maven-jar-plugin</artifactId>-->
-            <!--<configuration>-->
-            <!--<classifier>${os.detected.classifier}</classifier>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.0.2</version>
@@ -233,11 +229,19 @@
                             <outputDirectory>${basedir}/src/main/proto</outputDirectory>
                             <resources>
                                 <resource>
+                                    <directory>../proto/asset-allocation/</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                                <resource>
                                     <directory>../proto/finance/</directory>
                                     <filtering>true</filtering>
                                 </resource>
                                 <resource>
                                     <directory>../proto/datacollection/</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                                <resource>
+                                    <directory>../proto/asset-allocation/</directory>
                                     <filtering>true</filtering>
                                 </resource>
                             </resources>
@@ -252,7 +256,8 @@
                 <configuration>
                     <protocArtifact>com.google.protobuf:protoc:3.4.0:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
-                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
+                    </pluginArtifact>
                 </configuration>
                 <executions>
                     <execution>
