--- a/aaas-api-finance/src/main/resources/application-test.yml
+++ b/aaas-api-finance/src/main/resources/application-test.yml
@@ -44,6 +44,9 @@ server:
 grpc:
   host: localhost
   port: 10121
+  asset-allocation:
+    host: localhost
+    port: 10021
     
 application:
     swagger:
