--- a/aaas-app-tools/aaas-app-checkfunds/pom.xml
+++ b/aaas-app-tools/aaas-app-checkfunds/pom.xml
@@ -14,9 +14,9 @@
   <description>aaas-app-checkfunds</description>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.0.RELEASE</version>	
+    <groupId>com.shellshellfish</groupId>
+    <artifactId>aaas-app-tools</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <properties>
