--- a/aaas-app-tools/aaas-app-oeminfo/pom.xml
+++ b/aaas-app-tools/aaas-app-oeminfo/pom.xml
@@ -10,9 +10,9 @@
 	<name>aaas-app-oeminfo</name>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.RELEASE</version>
+		<groupId>com.shellshellfish</groupId>
+		<artifactId>aaas-app-tools</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<properties>
