--- a/aaas-api-user-info/pom.xml
+++ b/aaas-api-user-info/pom.xml
@@ -117,10 +117,10 @@
 			<version>3.5</version>
 		</dependency>
 		<!-- add security for swigger static -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-security</artifactId>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>io.springfox</groupId>
