fix config issue

--- a/aaas-api-dm/src/main/resources/application-dev.yml
+++ b/aaas-api-dm/src/main/resources/application-dev.yml
@@ -4,7 +4,8 @@ server:
   contextPath: /
 ---
 spring:
-  profiles: dev
+  jpa:
+    open-in-view: false
   data:
       mongodb:
         database: funds
