--- a/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-it.yml
+++ b/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-it.yml
@@ -1,17 +1,15 @@
+---
 server:
   port: 10160
-  contextPath: /
 logging:
   level:
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-    org.springframework.data: debug
+    org.hibernate.SQL: info
+    org.hibernate.type.descriptor.sql.BasicBinder: info
+    org.springframework.data: info
 
+---
 
 spring:
-  jpa:
-    hibernate:
-      ddl-auto: update
   data:
     mongodb:
       database: test1
@@ -19,28 +17,36 @@ spring:
       port: 27017
       zhongzheng: "zhongzheng"
       funds: "funds"
+  jpa:
+    hibernate:
+      ddl-auto: update
   rabbitmq:
-    listener:
-      simple:
-        acknowledge-mode: auto
-    username: ssf
-    password: shellshellfish
-    host: 192.168.1.22
-    port: 5672
-    virtual-host: aaas
-    topicQueuePayName: com.ssf.topic.queue.pay
-    topicQueueOrderName: com.ssf.topic.queue.order
-    topicExchangeName: com.ssf.topic.exchange
-    topicPay: shellshellfish.pay
-    topicOrder: shellshellfish.order
-    topicUserinfo: shellshellfish.userinfo
+     listener:
+       simple:
+         acknowledge-mode: auto
+     username: ssf
+     password: shellshellfish
+     host: 192.168.1.249
+     port: 5672
+     virtual-host: aaas
+     topicQueuePayName: com-ssf-topic-queue-pay
+     topicQueueOrderName: com-ssf-topic-queue-order
+     topicQueueUserinfoName: com-ssf-topic-queue-userinfo
+     topicExchangeName: com-ssf-topic-exchange
+     topicPay: shellshellfish.pay
+     topicOrder: shellshellfish.order
+     topicUserinfo: shellshellfish.userinfo
+     topicDailyCalculateAsset: com-ssf-topic-calculate-asset
   redis:
     host: 192.168.1.10
     port: 6379
     password: redis123
+    timeout: 0
+    pool:
+
 datasource:
   sampleapp:
-    url: jdbc:mysql://192.168.1.249:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
+    url: jdbc:mysql://192.168.1.249:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
     username: ssf01
     password: R489cfRKfEY7LNM9
     driverClassName: com.mysql.jdbc.Driver
@@ -54,26 +60,11 @@ datasource:
         batch_size: 50
       hbm2ddl.method: update
       show_sql: true
-      format_sql: false
+      format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect
-  
+
 grpc:
   port: 10161
-  userinfo:
-    host: localhost
-    port: 10061
-  data-manager-rpc:
-    host: localhost
-    port: 10031
-  finance-trade-order-rpc:
-    host: localhost
-    port: 10101
-  finance-trade-pay-rpc:
-    host: localhost
-    port: 10111
-  datacollection-server-rpc:
-    host: localhost
-    port: 10091
 
 
 aaas-api-finance-url: http://localhost:10120
@@ -83,8 +74,14 @@ api-asset-alloction-url: http://localhost:10020
 # 每日收益计算 多线程
 daily-finance-calculate-thread: 8
 
-oem_info:
-  oem_id: 1
-    oem_name: 贝贝鱼
-  oem_id: 2
-    oem_name: 百合
+#oeminfo
+oem-info:
+  oemInfos:
+   - oem_id: 1
+     oem_name: 贝贝鱼
+     bank_phone: xxxxxxxx
+     prod_name: 贝贝鱼智投
+   - oem_id: 2
+     oem_name: 百合
+     bank_phone: 400-88-96799
+     prod_name: 百合智投
