--- a/aaas-api-user-info/src/main/resources/logback.properties
+++ b/aaas-api-user-info/src/main/resources/logback.properties
@@ -10,7 +10,7 @@ max.file.size=100MB
 max.history=50
 
 conversion.pattern=%d{yyyy-MM-dd HH:mm:ss} %highlight(%-5level) %logger{30}[%line]: %m%n
-root.level=info
+root.level=dev
 
 
 
