--- a/aaas-api-user-info/src/main/resources/application-it.yml
+++ b/aaas-api-user-info/src/main/resources/application-it.yml
@@ -14,7 +14,7 @@ spring:
       ddl-auto: update
   data:
     mongodb:
-      database: test1
+      database: ssfui
       host: 192.168.1.249
       port: 27017
       zhongzheng: "zhongzheng"
