--- a/aaas-api-user-info/src/main/resources/application-test.yml
+++ b/aaas-api-user-info/src/main/resources/application-test.yml
@@ -15,7 +15,7 @@ spring:
       ddl-auto: update
   data:
     mongodb:
-      database: test1
+      database: ssfui
       host: 192.168.1.249
       port: 30005
       zhongzheng: "zhongzheng"
