--- a/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-dev.yml
+++ b/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-dev.yml
@@ -12,7 +12,7 @@ logging:
 spring:
   data:
     mongodb:
-      database: test1
+      database: ssfui
       host: 192.168.1.10
       port: 27017
       zhongzheng: "zhongzheng"
