--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
@@ -10,7 +10,7 @@ logging:
 spring:
 #  data:
 #    mongodb:
-#      database: test1
+#      database: ssfui
 #      host: 192.168.1.249
 #      port: 30005
   rabbitmq:
