--- a/aaas-api-gateway/src/main/resources/application-dev.yml
+++ b/aaas-api-gateway/src/main/resources/application-dev.yml
@@ -63,4 +63,8 @@ shellshellfish:
     - /phoneapi-ssf/**
     - /phoneapii-ssf/**
     - /heartbeat/
+management:
+  endpoints:
+    web:
+      base-path: /
   
