--- a/aaas-api-user-login/src/main/resources/application.yml
+++ b/aaas-api-user-login/src/main/resources/application.yml
@@ -3,5 +3,10 @@ server:
   contextPath: /
 spring:
   application:
-    name: aaas-api-user-login `
+    name: aaas-api-user-login
 
+
+management:
+  endpoints:
+    web:
+      base-path: /
