--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
@@ -91,3 +91,8 @@ cron:
   frequency:
     #每天10：45分开始
     jobwithcrontrigger: 0 45 10 ? * * *
+
+management:
+  endpoints:
+    web:
+      base-path: /
