--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -66,3 +66,8 @@ application:
         contactEmail:
         license:
         licenseUrl:
+
+management:
+  endpoints:
+    web:
+      base-path: /
