--- a/aaas-api-asset-allocation/src/main/resources/application-it.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-it.yml
@@ -50,3 +50,8 @@ application:
         contactEmail:
         license:
         licenseUrl:
+
+management:
+  endpoints:
+    web:
+      base-path: /
