--- a/aaas-api-asset-allocation/src/main/resources/application-k8s.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-k8s.yml
@@ -57,3 +57,8 @@ application:
         contactEmail:
         license:
         licenseUrl:
+
+management:
+  endpoints:
+    web:
+      base-path: /
