--- a/aaas-api-asset-allocation/src/main/resources/application-test.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-test.yml
@@ -60,3 +60,8 @@ application:
         contactEmail:
         license:
         licenseUrl:
+
+management:
+  endpoints:
+    web:
+      base-path: /
