--- a/aaas-api-finance/src/main/resources/application-dev.yml
+++ b/aaas-api-finance/src/main/resources/application-dev.yml
@@ -63,4 +63,9 @@ api-data-manager-url: http://localhost:10030
         
 shellshellfish:
   asset-allocation-url: "http://localhost:10020"
+
+management:
+  endpoints:
+    web:
+      base-path: /
     
