--- a/aaas-api-finance/src/main/resources/application-k8s.yml
+++ b/aaas-api-finance/src/main/resources/application-k8s.yml
@@ -61,4 +61,9 @@ application:
 
 api-data-manager-url: http://aaas-api-data-manager:10030
 shellshellfish:
-  asset-allocation-url: "http://localhost:10020"
+  assetallocation-url: "http://localhost:10020"
+
+management:
+  endpoints:
+    web:
+      base-path: /
