--- a/aaas-api-finance/src/main/resources/application-test.yml
+++ b/aaas-api-finance/src/main/resources/application-test.yml
@@ -72,3 +72,8 @@ api-data-manager-url: http://localhost:10030
 
 shellshellfish:
   asset-allocation-url: "http://localhost:10020"
+
+management:
+  endpoints:
+    web:
+      base-path: /
