--- a/aaas-api-gateway/src/main/resources/application-test.yml
+++ b/aaas-api-gateway/src/main/resources/application-test.yml
@@ -55,4 +55,8 @@ shellshellfish:
     - /v1/api/bankaccounts/**
     - /phoneapi-ssf/**
     - /heartbeat/
-  
+
+management:
+  endpoints:
+    web:
+      base-path: /
