--- a/aaas-api-user-info/src/main/resources/application-it.yml
+++ b/aaas-api-user-info/src/main/resources/application-it.yml
@@ -88,3 +88,8 @@ api-asset-alloction-url: http://localhost:10020
 
 # 每日收益计算 多线程
 daily-finance-calculate-thread: 8
+
+management:
+  endpoints:
+    web:
+      base-path: /
