divide table based on oemid

--- a/aaas-api-asset-allocation/src/main/resources/application-prod.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-prod.yml
@@ -18,7 +18,7 @@ spring:
       ddl-auto: update
   data:
     mongodb:
-      database: funds
+      database: ssf_asset_allo
       host: localhost
       port: 27017
       collection: portfolio_yield_all
