--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -22,7 +22,7 @@ spring:
       ddl-auto: update
   data:
     mongodb:
-      database: funds
+      database: ssf_asset_allo
       host: 192.168.1.10
       port: 27017
       collection: portfolio_yield_all
