--- a/aaas-api-asset-allocation/src/main/resources/application-it.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-it.yml
@@ -9,7 +9,7 @@ spring:
         ddl-auto: update
     data:
         mongodb:
-          database: funds
+          database: ssf_asset_allo
           host: 192.168.1.249
           port: 27017
           collection: portfolio_yield_all
