--- a/aaas-api-asset-allocation/src/main/resources/application-test.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-test.yml
@@ -18,7 +18,7 @@ spring:
       ddl-auto: update
   data:
     mongodb:
-      database: funds
+      database: ssf_asset_allo
       host: 192.168.1.249
       port: 30005
       collection: portfolio_yield_all
