local yaml file is needed

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ target/
 Thumbs.db
 
 # local config ignore
-*-local*.yml
+#*-local*.yml
 *-local*.xml
 target/
 !.mvn/wrapper/maven-wrapper.jar
@@ -56,4 +56,3 @@ dist/
 nbdist/
 .nb-gradle/
 
-data-manager/
