docker-compose.yml

--- a/aaas-api-finance/src/main/resources/application-k8s.yml
+++ b/aaas-api-finance/src/main/resources/application-k8s.yml
@@ -45,7 +45,7 @@ grpc:
 #  host: localhost
   port: 10121
   asset-allocation:
-    host: localhost
+    host: aaas-api-asset-allocation 
     port: 10021
 application:
     swagger:
@@ -61,7 +61,7 @@ application:
 
 api-data-manager-url: http://aaas-api-data-manager:10030
 shellshellfish:
-  assetallocation-url: "http://localhost:10020"
+  assetallocation-url: "http://aaas-api-asset-allocation:10020"
 
 management:
   endpoints:
