--- a/aaas-api-finance/docker-compose.yml
+++ b/aaas-api-finance/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "10121:10121"
     environment:
       - SPRING_PROFILES_ACTIVE=k8s
-      - AVA_OPTIONS=-Xmx256m
+      - JAVA_OPTIONS=-Xmx256m
       
       
       
