--- a/aaas-api-asset-allocation/pom.xml
+++ b/aaas-api-asset-allocation/pom.xml
@@ -294,42 +294,21 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>fabric8-maven-plugin</artifactId>
-                <version>3.5.33</version>
-                <configuration>
-                    <resources>
-                        <labels>
-                            <all>
-                                <property>
-                                    <name>app</name>
-                                    <value>aaas-api-asset-allocation</value>
-                                </property>
-                                <property>
-                                    <name>hystrix.enabled</name>
-                                    <value>false</value>
-                                </property>
-                            </all>
-                        </labels>
-                    </resources>
-                    <enricher>
-                        <config>
-                            <spring-boot-health-check>
-                                <port>4444</port>
-                            </spring-boot-health-check>
-                        </config>
-                    </enricher>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>fmp</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+                           <groupId>io.fabric8</groupId>
+                           <artifactId>fabric8-maven-plugin</artifactId>
+                           <version>3.5.28</version>
+                           <configuration>
+                                 <composeFile>docker-compose.yml</composeFile>
+                           </configuration>
+                           <executions>
+                                 <execution>
+                                        <goals>
+                                               <goal>resource</goal>
+                                               <goal>build</goal>
+                                        </goals>
+                                 </execution>
+                           </executions>
+                  </plugin>
         </plugins>
     </build>
 </project>
