--- a/aaas-api-dm/docker-compose.yml
+++ b/aaas-api-dm/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "10031:10031"
     environment:
       - SPRING_PROFILES_ACTIVE=k8s
-      - AVA_OPTIONS=-Xmx256m
+      - JAVA_OPTIONS=-Xmx256m
       
       
       
