--- a/aaas-api-dm/pom.xml
+++ b/aaas-api-dm/pom.xml
@@ -301,43 +301,22 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>io.fabric8</groupId>
-        <artifactId>fabric8-maven-plugin</artifactId>
-        <version>3.5.33</version>
-        <configuration>
-          <resources>
-            <labels>
-              <all>
-                <property>
-                  <name>app</name>
-                  <value>aaas-api-data-manager</value>
-                </property>
-                <property>
-                  <name>hystrix.enabled</name>
-                  <value>false</value>
-                </property>
-              </all>
-            </labels>
-          </resources>
-          <enricher>
-            <config>
-              <spring-boot-health-check>
-                <port>4444</port>
-              </spring-boot-health-check>
-            </config>
-          </enricher>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>deploy</phase>
-            <id>fmp</id>
-              <goals>
-                <goal>deploy</goal>
-              </goals>
-          </execution>
-        </executions>
-      </plugin>
+        <plugin>
+                           <groupId>io.fabric8</groupId>
+                           <artifactId>fabric8-maven-plugin</artifactId>
+                           <version>3.5.28</version>
+                           <configuration>
+                                 <composeFile>docker-compose.yml</composeFile>
+                           </configuration>
+                           <executions>
+                                 <execution>
+                                        <goals>
+                                               <goal>resource</goal>
+                                               <goal>build</goal>
+                                        </goals>
+                                 </execution>
+                           </executions>
+         </plugin>
     </plugins>
   </build>
   <!-- junit surefire test-->
