--- a/aaas-api-risk-assessment/pom.xml
+++ b/aaas-api-risk-assessment/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.shellshellfish</groupId>
 	<artifactId>aaas-api-risk-assessment</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>aaas-api-risk-assessment</name>
@@ -133,43 +133,22 @@
 					</compilerArguments>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>io.fabric8</groupId>
-				<artifactId>fabric8-maven-plugin</artifactId>
-				<version>3.5.33</version>
-				<configuration>
-					<resources>
-						<labels>
-							<all>
-								<property>
-									<name>app</name>
-									<value>aaas-api-risk-assessment</value>
-								</property>
-								<property>
-									<name>hystrix.enabled</name>
-									<value>false</value>
-								</property>
-							</all>
-						</labels>
-					</resources>
-					<enricher>
-						<config>
-							<spring-boot-health-check>
-								<port>4444</port>
-							</spring-boot-health-check>
-						</config>
-					</enricher>
-				</configuration>
-				<executions>
-					<execution>
-						<id>fmp</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>deploy</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+                        <plugin>
+                           <groupId>io.fabric8</groupId>
+                           <artifactId>fabric8-maven-plugin</artifactId>
+                           <version>3.5.28</version>
+                           <configuration>
+                                 <composeFile>docker-compose.yml</composeFile>
+                           </configuration>
+                           <executions>
+                                 <execution>
+                                        <goals>
+                                               <goal>resource</goal>
+                                               <goal>build</goal>
+                                        </goals>
+                                 </execution>
+                           </executions>
+                      </plugin>
 		</plugins>
 	</build>
 	<!-- junit surefire test-->
