update for finance run time error

--- a/aaas-api-gateway/pom.xml
+++ b/aaas-api-gateway/pom.xml
@@ -138,8 +138,7 @@
                            <executions>
                                  <execution>
                                         <goals>
-                                               <goal>resource</goal>
-                                               <goal>build</goal>
+                                               <goal>deploy</goal>
                                         </goals>
                                  </execution>
                            </executions>
