--- a/aaas-app-datacollection-client/pom.xml
+++ b/aaas-app-datacollection-client/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.shellshellfish</groupId>
 	<artifactId>aaas-app-datacollection-client</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>aaas-app-datacollection-client</name>
