--- a/aaas-api-dm/pom.xml
+++ b/aaas-api-dm/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.shellshellfish</groupId>
   <artifactId>aaas-api-data-manager</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>aaas-api-data-manager</name>
