--- a/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.shellshellfish</groupId>
 	<artifactId>aaas-finance-trade-pay</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>aaas-finance-trade-pay</name>
