--- a/aaas-funds-datacollection-server/pom.xml
+++ b/aaas-funds-datacollection-server/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.shellshellfish</groupId>
     <artifactId>aaas-funds-datacollection-server</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>aaas-funds-datacollection-server</name>
