--- a/aaas-api-finance/pom.xml
+++ b/aaas-api-finance/pom.xml
@@ -342,7 +342,7 @@
               <all>
                 <property>
                   <name>app</name>
-                  <value>aaas-api-finance</value>
+                  <value>${artifactId}-${version}</value>
                 </property>
                 <property>
                   <name>hystrix.enabled</name>
