--- a/aaas-api-risk-assessment/pom.xml
+++ b/aaas-api-risk-assessment/pom.xml
@@ -143,7 +143,7 @@
 							<all>
 								<property>
 									<name>app</name>
-									<value>aaas-api-risk-assessment</value>
+									<value>${artifactId}-${version}</value>
 								</property>
 								<property>
 									<name>hystrix.enabled</name>
