--- a/aaas-finance-caculate/pom.xml
+++ b/aaas-finance-caculate/pom.xml
@@ -168,7 +168,7 @@
 							<all>
 								<property>
 									<name>app</name>
-									<value>aaas-finance-caculate</value>
+									<value>${artifactId}-${version}</value>
 								</property>
 								<property>
 									<name>hystrix.enabled</name>
