--- a/aaas-api-dm/pom.xml
+++ b/aaas-api-dm/pom.xml
@@ -323,7 +323,7 @@
               <all>
                 <property>
                   <name>app</name>
-                  <value>aaas-api-data-manager</value>
+                  <value>${artifactId}-${version}</value>
                 </property>
                 <property>
                   <name>hystrix.enabled</name>
