--- a/aaas-api-user-login/pom.xml
+++ b/aaas-api-user-login/pom.xml
@@ -217,7 +217,7 @@
 							<all>
 								<property>
 									<name>app</name>
-									<value>aaas-api-user-login</value>
+									<value>${artifactId}-${version}</value>
 								</property>
 								<property>
 									<name>hystrix.enabled</name>
