--- a/aaas-app-tools/aaas-app-checkfunds/pom.xml
+++ b/aaas-app-tools/aaas-app-checkfunds/pom.xml
@@ -330,7 +330,7 @@
               <all>
                 <property>
                   <name>app</name>
-                  <value>aaas-app-checkfunds</value>
+                  <value>${artifactId}-${version}</value>
                 </property>
                 <property>
                   <name>hystrix.enabled</name>
