--- a/aaas-app-tools/aaas-app-oeminfo/pom.xml
+++ b/aaas-app-tools/aaas-app-oeminfo/pom.xml
@@ -175,7 +175,7 @@
 							<all>
 								<property>
 									<name>app</name>
-									<value>aaas-app-oeminfo</value>
+									<value>${artifactId}-${version}</value>
 								</property>
 								<property>
 									<name>hystrix.enabled</name>
