1,my chicombination add recent date 2, update redis pool size 3, fix logger level to info

--- a/aaas-api-user-info/src/main/resources/application-it.yml
+++ b/aaas-api-user-info/src/main/resources/application-it.yml
@@ -1,6 +1,5 @@
 server:
   port: 10060
-  contextPath: /
 logging:
   level:
     org.hibernate.SQL: DEBUG
@@ -41,10 +40,11 @@ spring:
     port: 6379
     password: redis123
     pool:
-      max-active: 8
-      max-wait: -1
-      max-idle: 8
-      min-idle: 0
+      lettuce:
+        max-active: 8
+        max-wait: -1
+        max-idle: 8
+        min-idle: 0
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.249:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
