--- a/aaas-api-user-info/src/main/resources/application-k8s.yml
+++ b/aaas-api-user-info/src/main/resources/application-k8s.yml
@@ -1,7 +1,6 @@
 ---
 server:
   port: 10060
-  contextPath: /
 logging:
   level:
     org.hibernate.SQL: info
@@ -39,6 +38,12 @@ spring:
     host: redis-service
     port: 6379
     password: redis123
+    pool:
+      lettuce:
+        max-active: 8
+        max-wait: -1
+        max-idle: 8
+        min-idle: 0
 datasource:
   sampleapp:
     url: jdbc:mysql://external-mysql-service:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
