2, update redis pool size

--- a/aaas-api-user-info/src/main/resources/application-dev.yml
+++ b/aaas-api-user-info/src/main/resources/application-dev.yml
@@ -41,11 +41,11 @@ spring:
     host: 192.168.1.10
     port: 6379
     password: redis123
-    timeout: 50ms
-    pool:
-      lettuce:
+    timeout: -1ms
+    lettuce:
+      pool:
         max-active: 8
-        max-wait: -1
+        max-wait: -1ms
         max-idle: 8
         min-idle: 0
 datasource:
