--- a/aaas-api-user-info/src/main/resources/application-local.yml
+++ b/aaas-api-user-info/src/main/resources/application-local.yml
@@ -35,10 +35,10 @@ spring:
     port: 6379
     password: redis123
     timeout: 50ms
-    pool:
-      lettuce:
+    lettuce:
+      pool:
         max-active: 8
-        max-wait: -1
+        max-wait: -1ms
         max-idle: 8
         min-idle: 0
 
