--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-k8s.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-k8s.yml
@@ -30,12 +30,13 @@ spring:
     host: redis-service
     port: 6379
     password: redis123
-    timeout: 0
-    pool:
-      max-active: 8
-      max-wait: -1
-      max-idle: 8
-      min-idle: 0
+    timeout: -1ms
+    lettuce:
+      pool:
+        max-active: 8
+        max-wait: -1ms
+        max-idle: 8
+        min-idle: 0
 datasource:
   sampleapp:
     url: jdbc:mysql://external-mysql-service:3306/ssftrdorder?useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
