--- a/aaas-api-user-info/src/main/resources/application-it.yml
+++ b/aaas-api-user-info/src/main/resources/application-it.yml
@@ -39,10 +39,10 @@ spring:
     host: 192.168.1.10
     port: 6379
     password: redis123
-    pool:
-      lettuce:
+    lettuce:
+      pool:
         max-active: 8
-        max-wait: -1
+        max-wait: -1ms
         max-idle: 8
         min-idle: 0
 datasource:
