--- a/aaas-api-user-info/src/main/resources/application-k8s.yml
+++ b/aaas-api-user-info/src/main/resources/application-k8s.yml
@@ -38,10 +38,10 @@ spring:
     host: redis-service
     port: 6379
     password: redis123
-    pool:
-      lettuce:
+    lettuce:
+      pool:
         max-active: 8
-        max-wait: -1
+        max-wait: -1ms
         max-idle: 8
         min-idle: 0
 datasource:
