--- a/aaas-api-user-info/src/main/resources/application-test.yml
+++ b/aaas-api-user-info/src/main/resources/application-test.yml
@@ -38,9 +38,10 @@ spring:
     host: 192.168.1.249
     port: 16379
     password: redis123
-      lettuce:
+    lettuce:
+      pool:
         max-active: 8
-        max-wait: -1
+        max-wait: -1ms
         max-idle: 8
         min-idle: 0
 datasource:
