--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-it.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-it.yml
@@ -27,13 +27,14 @@ spring:
       port: 27017
       database: zhongzheng
   redis:
-      host: localhost
-      port: 6379
-      password: redis123
-      timeout: 0
+    host: localhost
+    port: 6379
+    password: redis123
+    timeout: -1ms
+    lettuce:
       pool:
         max-active: 8
-        max-wait: -1
+        max-wait: -1ms
         max-idle: 8
         min-idle: 0
 
