--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-test.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-test.yml
@@ -30,12 +30,13 @@ spring:
     host: 192.168.1.249
     port: 16379
     password: redis123
-    timeout: 0
-    pool:
-      max-active: 8
-      max-wait: -1
-      max-idle: 8
-      min-idle: 0
+    timeout: -1ms
+    lettuce:
+      pool:
+        max-active: 8
+        max-wait: -1ms
+        max-idle: 8
+        min-idle: 0
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.249:30006/ssftrdorder?useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
