add url to call

--- a/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-dev.yml
+++ b/aaas-app-tools/aaas-app-checkfunds/src/main/resources/application-dev.yml
@@ -38,6 +38,7 @@ datasource:
 shellshellfish:
   asset-allocation-insertdf-url: "http://localhost:10020//api//asset-allocation//job//insertDailyFund"
   asset-allocation-inithistory-url: "http://localhost:10020//api//asset-allocation//job//getAllIdAndSubId"
+  asset-allocation-updateallmaximumlosses-url: "http://localhost:10020/api/asset-allocation/job/updateAllMaximumLosses/"
   asset-allocation-initpyamongo-url: "http://localhost:10020//api//asset-allocation//job//getFundGroupIncomeAllToMongoDb"
   data-manager-initcache-url: "http://localhost:10030//api//datamanager//financeFrontPage"
   data-manager-initcache-detail-url: "http://localhost:10030//api//datamanager//checkPrdDetails"
