--- a/aaas-mid-api/src/main/resources/application-k8s.yml
+++ b/aaas-mid-api/src/main/resources/application-k8s.yml
@@ -4,6 +4,9 @@ server:
 grpc:
 #  host: localhost
   port: 10131
+  order:
+      host: localhost
+      port: 10101
 logging:
   level:
     org.hibernate.SQL: DEBUG
