mid-api add health check

--- a/aaas-mid-api/src/main/resources/application-dev.yml
+++ b/aaas-mid-api/src/main/resources/application-dev.yml
@@ -26,6 +26,7 @@ shellshellfish:
   data-manager-url: "http://localhost:10030"
   
 
-security:
-  basic:
-    enabled: false
+management:
+  endpoints:
+    web:
+      base-path: /
