--- a/aaas-mid-api/src/main/resources/application-prod.yml
+++ b/aaas-mid-api/src/main/resources/application-prod.yml
@@ -25,8 +25,9 @@ shellshellfish:
   trade-pay-url: "http://localhost:10110"
   data-manager-url: "http://localhost:10030"
   
-security:
-  basic:
-    enabled: false
+management:
+  endpoints:
+    web:
+      base-path: /
 
   
