--- a/aaas-app-tools/aaas-app-zhongzhenapi/pom.xml
+++ b/aaas-app-tools/aaas-app-zhongzhenapi/pom.xml
@@ -118,7 +118,10 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 
 	</dependencies>
 	<build>
