--- a/aaas-app-tools/aaas-app-zhongzhenapi/src/main/resources/application-it.yml
+++ b/aaas-app-tools/aaas-app-zhongzhenapi/src/main/resources/application-it.yml
@@ -12,7 +12,7 @@ logging:
 spring:
   data:
     mongodb:
-      database: ssfui
+      database: ssfzzapi
       host: 192.168.1.249
       port: 27017
       zhongzheng: "zhongzheng"
