--- a/aaas-app-tools/aaas-app-zhongzhenapi/src/main/resources/application-k8s.yml
+++ b/aaas-app-tools/aaas-app-zhongzhenapi/src/main/resources/application-k8s.yml
@@ -14,7 +14,7 @@ spring:
       ddl-auto: update
   data:
     mongodb:
-      database: ssfui
+      database: ssfzzapi
       host: external-mongo-service
       port: 27017
       zhongzheng: "zhongzheng"
