--- a/aaas-app-tools/aaas-app-zhongzhenapi/src/main/resources/application-prod.yml
+++ b/aaas-app-tools/aaas-app-zhongzhenapi/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 ---
 server:
-  port: 10160
-  contextPath: /
+  port: 10170
+
 logging:
   level:
     org.hibernate.SQL: info
@@ -14,7 +14,7 @@ spring:
       ddl-auto: update
   data:
     mongodb:
-      database: ssfui
+      database: ssfzzapi
       host: localhost
       port: 27017
       zhongzheng: "zhongzheng"
@@ -59,7 +59,7 @@ datasource:
       dialect: org.hibernate.dialect.MySQLDialect
   
 grpc:
-  port: 10161
+  port: 10171
 
 aaas-api-finance-url: http://localhost:10120
 
