--- a/aaas-app-tools/aaas-app-zhongzhenapi/src/main/resources/application-test.yml
+++ b/aaas-app-tools/aaas-app-zhongzhenapi/src/main/resources/application-test.yml
@@ -1,7 +1,7 @@
 ---
 server:
-  port: 10160
-  contextPath: /
+  port: 10170
+
 logging:
   level:
     org.hibernate.SQL: DEBUG
@@ -15,7 +15,7 @@ spring:
       ddl-auto: update
   data:
     mongodb:
-      database: ssfui
+      database: ssfzzapi
       host: 192.168.1.249
       port: 30005
       zhongzheng: "zhongzheng"
@@ -60,7 +60,7 @@ datasource:
   
 
 grpc:
-  port: 10161
+  port: 10171
 
 
 aaas-api-finance-url: http://localhost:10120
