--- a/aaas-api-finance/src/main/resources/application-pretest.yml
+++ b/aaas-api-finance/src/main/resources/application-pretest.yml
@@ -12,7 +12,7 @@ spring:
         fail-on-empty-beans: false
     data:
         mongodb:
-            host: localhost
+            host: 192.168.1.10
             port: 27017
             database: zhongzheng
 
