--- a/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-k8s.yml
+++ b/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-k8s.yml
@@ -82,3 +82,10 @@ api-asset-alloction-url: http://aaas-api-asset-allocation:10020
 
 # 每日收益计算 多线程
 daily-finance-calculate-thread: 8
+
+
+
+management:
+  endpoints:
+    web:
+      base-path: /
