--- a/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-test.yml
+++ b/aaas-app-tools/aaas-app-oeminfo/src/main/resources/application-test.yml
@@ -70,6 +70,12 @@ api-asset-alloction-url: http://localhost:10020
 # 每日收益计算 多线程
 daily-finance-calculate-thread: 8
 
+
+
+management:
+  endpoints:
+    web:
+      base-path: /
 #oeminfo
 oem-info:
   oemInfos:
